// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`p6-button disabled has a "disabled" attribute on the button when disabled is true 1`] = `
<p6-button disabled="true">
  <mock:shadow-root>
    <button aria-disabled="true" class="button" disabled="" type="submit">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-button>
`;

exports[`p6-button disabled has no "disabled" attribute on the button when disabled is false 1`] = `
<p6-button disabled="false">
  <mock:shadow-root>
    <button class="button" type="submit">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-button>
`;

exports[`p6-button mode does not add class when mode is default 1`] = `
<p6-button mode="2">
  <mock:shadow-root>
    <button class="button" type="submit">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-button>
`;

exports[`p6-button mode does not add class when mode is undefined 1`] = `
<p6-button mode="undefined">
  <mock:shadow-root>
    <button class="button" type="submit">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-button>
`;

exports[`p6-button mode has the class "is-danger" when mode is "0" 1`] = `
<p6-button mode="0">
  <mock:shadow-root>
    <button class="button is-danger" type="submit">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-button>
`;

exports[`p6-button mode has the class "is-default" when mode is "2" 1`] = `
<p6-button mode="2">
  <mock:shadow-root>
    <button class="button" type="submit">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-button>
`;

exports[`p6-button mode has the class "is-info" when mode is "3" 1`] = `
<p6-button mode="3">
  <mock:shadow-root>
    <button class="button is-info" type="submit">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-button>
`;

exports[`p6-button mode has the class "is-primary" when mode is "5" 1`] = `
<p6-button mode="5">
  <mock:shadow-root>
    <button class="button is-primary" type="submit">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-button>
`;

exports[`p6-button mode has the class "is-success" when mode is "4" 1`] = `
<p6-button mode="4">
  <mock:shadow-root>
    <button class="button is-success" type="submit">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-button>
`;

exports[`p6-button mode has the class "is-warning" when mode is "1" 1`] = `
<p6-button mode="1">
  <mock:shadow-root>
    <button class="button is-warning" type="submit">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-button>
`;

exports[`p6-button outlined has a "is-outlined" class when outlined is true 1`] = `
<p6-button outlined="true">
  <mock:shadow-root>
    <button class="button is-outlined" type="submit">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-button>
`;

exports[`p6-button outlined has no "is-outlined" class when outlined is false 1`] = `
<p6-button outlined="false">
  <mock:shadow-root>
    <button class="button" type="submit">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-button>
`;

exports[`p6-button size does not add class when size is default 1`] = `
<p6-button size="1">
  <mock:shadow-root>
    <button class="button" type="submit">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-button>
`;

exports[`p6-button size has the class "is-normal" when size is "1" 1`] = `
<p6-button size="1">
  <mock:shadow-root>
    <button class="button" type="submit">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-button>
`;

exports[`p6-button size has the class "is-small" when size is "0" 1`] = `
<p6-button size="0">
  <mock:shadow-root>
    <button class="button is-small" type="submit">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-button>
`;

exports[`p6-button waiting has a "is-loading" class when waiting is true 1`] = `
<p6-button waiting="true">
  <mock:shadow-root>
    <button class="button is-loading" type="submit">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-button>
`;

exports[`p6-button waiting has no "is-loading" class when waiting is false 1`] = `
<p6-button waiting="false">
  <mock:shadow-root>
    <button class="button" type="submit">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-button>
`;
